// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component renders a Header by default 1`] = `
<Fragment>
  <nav
    className="Header__nav"
  >
    <div>
      <h1>
        <Link
          to="/"
        >
          Music Book Reviews
        </Link>
      </h1>
      <span
        className="Header__tagline--wide"
      >
        For Students, Educators, and Parents!
      </span>
    </div>
  </nav>
  <span
    className="Header__tagline--narrow"
  >
    For Students, Educators, and Parents!
  </span>
  <div
    className="browse-and-search-container"
  >
    <div
      className="search-bar-container"
    >
       
       
    </div>
    <div
      className="show-dropdown"
    >
      <BrowseDropdown
        history={
          Object {
            "push": [Function],
          }
        }
      />
    </div>
  </div>
  <div
    className="menu-wide"
  >
    <ul
      className="menu-wide-list"
    >
      <li
        className="menu-wide-list-item"
      >
        <div
          className="menu-item"
          id="log-in"
          onClick={[Function]}
        >
          Log In/Register
        </div>
      </li>
      <li
        className="menu-wide-list-item"
      />
      <li
        className="menu-wide-list-item"
      >
        <Link
          className="menu-item"
          id="about"
          to="/about"
        >
          About
        </Link>
      </li>
    </ul>
  </div>
</Fragment>
`;

exports[`Header component renders the UI as expected 1`] = `
Array [
  <nav
    className="Header__nav"
  >
    <div>
      <h1>
        <a
          href="/"
          onClick={[Function]}
        >
          Music Book Reviews
        </a>
      </h1>
      <span
        className="Header__tagline--wide"
      >
        For Students, Educators, and Parents!
      </span>
    </div>
  </nav>,
  <span
    className="Header__tagline--narrow"
  >
    For Students, Educators, and Parents!
  </span>,
  <div
    className="browse-and-search-container"
  >
    <div
      className="search-bar-container"
    >
       
      
       
    </div>
    <div
      className="show-dropdown"
    >
      <div
        className="dropdown"
      >
        <div
          className="button"
          onClick={[Function]}
        >
          Browse
        </div>
      </div>
    </div>
  </div>,
  <div
    className="menu-wide"
  >
    <ul
      className="menu-wide-list"
    >
      <li
        className="menu-wide-list-item"
      >
        <div
          className="menu-item"
          id="log-in"
          onClick={[Function]}
        >
          Log In/Register
        </div>
      </li>
      <li
        className="menu-wide-list-item"
      >
        
      </li>
      <li
        className="menu-wide-list-item"
      >
        <a
          className="menu-item"
          href="/about"
          id="about"
          onClick={[Function]}
        >
          About
        </a>
      </li>
    </ul>
  </div>,
]
`;
